--- a/package/win32/doclib/update.htm
+++ b/package/win32/doclib/update.htm
@@ -9,20 +9,20 @@
 	<meta name="keywords" content="HSP3,HotSoupProcessor3,更新情報,アップデート">
 	<meta name="description" content="HSPの更新情報を掲載">
 	<link href="../main.css" rel="stylesheet" type="text/css" media="all">
-	<title>HSP3.5 アップデートガイド</title>
+	<title>HSP3.6 アップデートガイド</title>
 </head>
 <body>
 	<div id="CONTAINER">
 		<!-- ヘッダー -->
-		<p id="COPY">HSP : Hot Soup Processor ver3.51 / onion software 1997-2018(c)</p>
+		<p id="COPY">HSP : Hot Soup Processor ver3.6 / onion software 1997-2019(c)</p>
 		<img src="hsp3ttl.jpg" alt="タイトル" width="640" height="200">
-		<h1>HSP3.5 アップデートガイド</h1>
+		<h1>HSP3.6 アップデートガイド</h1>
 
 		<!-- 目次 -->
 		<ol>
 			<li><a href="#INTRO">イントロダクション</a></li>
-			<li><a href="#HSP34UPDATE">HSP3.5のアップデート概要</a></li>
-			<li><a href="#DIFF34">HSP3.5の変更点について</a></li>
+			<li><a href="#HSP34UPDATE">HSP3.6のアップデート概要</a></li>
+			<li><a href="#DIFF34">HSP3.6の変更点について</a></li>
 			<li><a href="#HSPDISH">HSP3Dishについて</a></li>
 			<li><a href="#HSPOBSOLETE">パッケージの同梱終了について</a></li>
 			<li><a href="#DIFF2">HSP2との違いについて</a></li>
@@ -61,31 +61,43 @@
 		<!-- 本文 -->
 		<h2 id="INTRO">イントロダクション</h2>
 		<p>
-			HSP3.5は、HSP3.4に替わる新しいバージョンです。
+			HSP3.6は、HSP3.5に替わる新しいバージョンです。
 			大幅な仕様の変更はなく、あくまでも上位互換として動作する形で、各種機能が追加されています。
 		</p>
 		<p>
-			ここでは、HSP3.5とHSP3.4の違いについて。
+			ここでは、HSP3.6とHSP3.5の違いについて。
 			そして、HSP2.61とHSP3全般の違いについて解説していきます。
 		</p>
 
 
-	<h2 id="HSP34UPDATE">HSP3.5のアップデート概要</h2>
+	<h2 id="HSP34UPDATE">HSP3.6のアップデート概要</h2>
 		<p>
-		HSP3.5は、特に変更を意識することなく、HSP3.4と同様にお使い頂けます。
-		HSP3.5で変更された項目の概要は、以下の通りです。
+		HSP3.6は、特に変更を意識することなく、HSP3.5と同様にお使い頂けます。
+		HSP3.6で変更された項目の概要は、以下の通りです。
 		</p>
 
 		<dl>
 
 			<dt>
-			開発環境の機能拡充
+			標準命令の拡充
 			</dt><br>
 			<dd>
 			<p>
-			標準で使用するHSPスクリプトエディタの機能拡張と不具合修正を行なっています。
-			実行ファイル作成時のアイコン書き換え、バージョン定義、UPX圧縮に対応したほか、
-			デバッグウインドウにコールスタック表示を追加、ログ表示機能も改修改修しています。
+			配置オブジェクトの配色を指定するためのobjcolor命令、24bitカラーコードを指定するためのrgbcolor命令など
+			多くの新機能を搭載しています。<br>
+			また、Unicode文字を標準で使用する新しいランタイム、hsp3utf、hsp3_64などもアップデートされています。
+			いままでの機能はそのままに、ゲームだけでなく、ツール製作や手軽なプロトタイピングに役立つ機能を拡充しています。
+			</p>
+			</dd>
+
+			<dt>
+			プラグイン機能拡充
+			</dt><br>
+			<dd>
+			<p>
+			新規追加プラグイン「hspsw」(Steamプラットフォーム連携API)、「hspmucom」
+			(MML記述によるFM音源楽曲再生プラグイン)、「ZLibWrap.dll」(zipファイルの圧縮解凍)など
+			高度な機能拡張を同梱しており、すぐに利用可能です。
 			</p>
 			</dd>
 
@@ -95,7 +107,6 @@
 			<dd>
 			<p>
 			iOS/android/html5(WebGL)上での実行をサポートする<a href="http://hsp.tv/make/hsp3dish.html" target="_blank">HSP3Dish</a>の各種機能を拡充しています。
-			新たにLinux及びRaspberry Piのサポートを開始しました。(ダウンロードは別パッケージになっています)
 			最新の端末に対応できる新しいSDKへの対応や、各種センサー情報の取得、ネットワークアクセス、スプライト描画などの機能も拡充しています。
 			幅広いデバイスへの変換をサポートするHSP3Dish Helperツールも、より便利で手軽に利用できようになりました。
 			</p>
@@ -107,51 +118,40 @@
 			<dd>
 			<p>
 			ハイレベルな3D表現を可能にする<a href="http://hsp.tv/make/hgimg4.html" target="_blank">HGIMG4プラグイン</a>を大幅に更新しています。
-			システムの安定度が向上したほか、ポストエフェクト、イベント制御機能が追加され、より手軽に使用できるようになっています。また、DirectXによる描画の選択が可能になったほか、	android,iOS,Linuxでの動作も新たにサポートしています。
+			システムの安定向上のほか、FBXモデル変換時の制約、複製時の制約など細かい使い勝手が向上しています。また、Unityからモデルやアニメーションをインポートする方法などもドキュメントで解説しています。
 			</p>
 			</dd>
 
 			<dt>
-			標準命令の拡充
+			新しいHSPTV素材
 			</dt><br>
 			<dd>
 			<p>
-			従来HSPDAプラグインの命令であった、sortval,sortstr,sortnote,sortgetなどのソート機能を標準命令として実装しています。
-			複数行文字列から特定の文字列を持つ行を検索するnotefind関数、変数バッファのサイズを調べるvarsize関数なども追加されています。
-			また、hspextプラグインにバイナリデータを送信を行なうcomputb命令が追加されています。
-			</p>
-			</dd>
-
-			<dt>
-			HSP3オフィシャル素材
-			</dt><br>
-			<dd>
-			<p>
-			自由に使える素材としてHSP3オフィシャルキャラクター "珠音（たまね）"を始めとした各種ファイルが同梱されています。
-			また、hgimg3/hgimg4で利用できる、HSP3オフィシャル3D素材 "珠音（たまね）"を同梱しています。
-			デフォルメ版とリアル頭身版に各種アニメーションも用意され、手軽に使用できます。
-			ゲームを中心に新たなサンプルスクリプトも数多く同梱し、オリジナルの作品作りに活用頂けます。
+			自由に使える素材として、HSPTVフォルダに多くの素材が拡充されています。
+			HSP3オフィシャルキャラクター "珠音（たまね）"を始めとして、プロ生ちゃんコラボ素材など
+			ゲームを中心に幅広く活用することができます。
+			新たなサンプルスクリプトも同梱し、オリジナルの作品作りに活用頂けます。
 			</p>
 			</dd>
 
 		</dl>
 
 		<p>
-		HSP3.5で追加された新機能を手軽に試すことができるサンプルスクリプトが、「sample/new35」フォルダに含まれています。
+		HSP3.6で追加された新機能を手軽に試すことができるサンプルスクリプトが、「sample/new36」フォルダに含まれています。
 		ぜひ新しいサンプルでの動作を、実際に実行してお試しください。
 		</p>
 
 
-		<h2 id="DIFF34">HSP3.5の変更点について</h2>
+		<h2 id="DIFF34">HSP3.6の変更点について</h2>
 		<p>
-			HSP3.5は、HSP3.4からのメジャーアップデートバージョンです。
-			HSP3.4をすでに使っているユーザーは、特に意識することなくHSP3.5をお使いいただけるはずです。
+			HSP3.6は、HSP3.5からのメジャーアップデートバージョンです。
+			HSP3.5をすでに使っているユーザーは、特に意識することなくHSP3.6をお使いいただけるはずです。
 		</p>
 		<p>
 			HSP3の詳細な更新履歴については、<a href="history.txt">こちら(history.txt)</a>を参照してください。
 		</p>
 		<p>
-			HSP3.4から追加変更された主要な項目は以下の通りです。
+			HSP3.5から追加変更された主要な項目は以下の通りです。
 		</p>
 		<UL>
 		<LI>標準機能の安定性向上と不具合の修正を行なっています
@@ -217,18 +217,13 @@
 
 	<h2 id="HSPOBSOLETE">パッケージの同梱終了について</h2>
 		<p>
-		これまでフルセットに同梱されていたHSPLetパッケージは、同梱されません。
-		HSPLetはJavaアプレットによってHSPスクリプトを動作させる仕組みですが、コードが古くなっていること、
-		アプレットのセキュリティ仕様変更により使用が困難なことなどの理由により、パッケージからは除外致しました。
-		HSPLetをご使用する場合は、別途HSPTV!のダウンロードリストから取得する必要がありますのでご注意ください。
-		</p>
-		<p>
-		また、以下のプラグイン・モジュールは、非推奨として扱われているため、マニュアル及びヘルプは、提供されません。
+		これまでフルセットに同梱されていたllmod3、HGIMG / HGIMGX (3D描画用プラグイン)パッケージは、同梱されません。
+		古いパッケージに含まれているランタイムを引き続き使用することは可能ですが、非推奨として扱われているため、マニュアル及びヘルプは、提供されません。
 		</p>
 		<UL>
 		<LI>llmod3 -> HSP3に対応した各種モジュールをご使用ください
 		<LI>HGIMG / HGIMGX (3D描画用プラグイン) -> HGIMG3/HGIMG4をご使用ください
-		<LI>HSPDX (2D描画用プラグイン) -> HSP3DISHをご使用ください
+		<LI>HSPDX (2D描画用プラグイン) -> HSP3DISHをご使用ください(プラグインは同梱されています)
 		</UL>
 		<p>
 		これらのプラグイン・モジュールは、コードが古くなっており、現行のWindows上での動作が保証されません。
