ドキュメントの修正
Former-commit-id: fd89c5b4b7decafdadb82155ceb31f280a224f46

--- a/package/win32/doclib/faq.htm
+++ b/package/win32/doclib/faq.htm
@@ -69,7 +69,7 @@
 			<dt>アイコンを書き変えても良いか？</dt>
 			<dd>
 				<p>可能です。</p>
-				<ul><li>→<a href="hspprog.htm#CHANGE_ICON">実行ファイルのアイコン書き換え</a></li></ul>
+				<ul><li>→<a href="hspprog.htm#ICONINS">実行ファイルのアイコン書き換え</a></li></ul>
 			</dd>
 			<dt>DLLは自作プログラムと一緒に配って良いか？</dt>
 			<dd><p>DLLの説明書を読み、指示に従ってください。</p></dd>
