--- a/package/win32/doclib/hspprog.htm
+++ b/package/win32/doclib/hspprog.htm
@@ -33,7 +33,6 @@
 					<li><a href="#HSP_MECHANISM">HSPのしくみ</a></li>
 					<li><a href="#EX_RUNTIME">拡張ランタイム</a></li>
 					<li><a href="#MAKE_EXE">実行ファイルの作成方法</a></li>
-					<li><a href="#EDIT_PACKFILE">PACKFILEの編集について</a></li>
 					<li><a href="#MAKE_SAVER">スクリーンセーバーの作成</a></li>
 					<li><a href="#START_OPT">起動オプションのパース</a></li>
 					<li><a href="#ICONINS">実行ファイルの書き換えについて</a></li>
@@ -181,6 +180,8 @@
 		<dl>
 			<dt>HSED3.EXE</dt>
 			<dd><p>HSPスクリプトエディタ本体</p></dd>
+			<dt>HSED3_EN.EXE</dt>
+			<dd><p>HSPスクリプトエディタ本体(英語版)</p></dd>
 			<dt>HSP3.EXE</dt>
 			<dd><p>HSP実行ファイル本体</p></dd>
 			<dt>HSP3DEBUG.DLL</dt>
@@ -195,6 +196,11 @@
 			が必ず同じディレクトリに存在していなければなりません。
 			また、実行ファイル(EXEファイル)を作成するためには、ランタイム
 			ファイル(HSPRT)も、同じディレクトリに必要です。
+		</p>
+		<p>
+			HSED3_EN.EXE を起動することで、メニューその他のインターフェースが
+			英語になります。HSP3本体の機能自体に変更はありませんが、英語版の環境で
+			利用したい方は、こちらをお試しください。
 		</p>
 		<p>
 			HSPスクリプトエディタを起動すると、新規のテキスト編集ウィンドウ
@@ -231,8 +237,6 @@
 		<dl>
 			<dt>HSPTMP</dt>
 			<dd><p>ソーススクリプトのテンポラリファイル</p></dd>
-			<dt>HSPTMP.I</dt>
-			<dd><p>ソーススクリプトのテンポラリファイル(通常は生成されません)</p></dd>
 			<dt>OBJ</dt>
 			<dd><p>実行オブジェクトのテンポラリファイル</p></dd>
 		</dl>
@@ -325,7 +329,7 @@
 			ディレクトリに格納されています。もし、他のディレクトリに移したい場合や、
 			ヘルプ表示をしようとした際にエラーが出る場合は、「オプション」ダイアログにある「ディレクトリ」
 			メニューを選択して、ヘルプデータのディレクトリを再設定してください
-			(たとえば、「c:\hsp30\hsphelp」など)。
+			(たとえば、「c:\hsp36\hsphelp」など)。
 			入力が空白の場合は、HSED3.EXEの下にあるHSPHELPというディレクトリを参照します。
 		</p>
 
@@ -344,7 +348,6 @@
 			<dt>マイドキュメント (標準)</dt>
 			<dd><p>
 				スクリプトエディタ起動時のカレントディレクトリをマイドキュメントに設定します。
-				ただし、Windows95(初期状態)では、マイドキュメントが存在しないため無効になります。
 			</p></dd>
 			<dt>ユーザーが指定したディレクトリ (オプション)</dt>
 			<dd><p>
@@ -356,7 +359,6 @@
 			<dd><p>
 				スクリプトエディタ起動時のカレントディレクトリは、システム標準の場所になります。
 				以前のスクリプトエディタ(ver2.6まで)と同様の動作になります。
-				Windows2000以降では、以前のディレクトリ位置を記憶します。
 			</p></dd>
 		</dl>
 
@@ -438,13 +440,6 @@
 				<p>
 					スマートフォンやタブレットなど、マルチプラットフォーム化が可能な命令のみをサポートしています。
 					通常の描画命令の他に、拡張された命令が用意されています。また、描画速度も向上しています。
-				</p>
-			</dd>
-			<dt>HGIMG3ランタイム(hsp3hg)</dt>
-			<dd>
-				<p>
-					HGIMG3ランタイムで作成したアプリケーションの実行ファイルを作成する際に使用します。
-					通常の描画命令は使用できず、HGIMG3で用意された専用の命令を使用します。
 				</p>
 			</dd>
 			<dt>HGIMG4ランタイム(hsp3gp)</dt>
@@ -575,162 +570,6 @@
 			これにより、実行ファイルのアイコンやバージョン情報、マニフェストなどを埋め込むことが可能です。<br>
 			詳しくは、「<a href="#ICONINS">実行ファイルの書き換えについて</a>」の項を参照してください。
 		</p>
-		<p>
-			HSP3.0以前で利用していた、「packfile編集」からパックされるファイルを選択して
-			実行ファイルを作成することも可能です。
-			(ただし、この方法はHSP3.0以降では推奨していません。)
-		</p>
-		<h4>マニュアルでEXEファイルを作成するための手順。(Ver2.x互換の方法)</h4>
-		<ul>
-			<li>
-				スクリプトのオブジェクトファイルを作成しておくこと。
-				この時、最初に実行されるオブジェクトファイル名は、
-				必ず「start.ax」にしておくこと。これがないと、スクリプトが起動されません。
-			</li>
-			<li>
-				「PACKFILE編集...」のダイアログで、EXEファイルに含めるための
-				ファイル一覧(PACKFILE)を作成します。ここでは、start.axなど
-				EXEファイルに埋め込むためのファイル名をすべて選択しておく必要があります。
-			</li>
-			<li>
-				スクリプトエディタのツールメニューから「EXEファイル作成」を選択します。
-				スクリーンセーバーの場合は、「スクリーンセーバー作成」を選択します。
-				これで、EXEまたはSCRファイルがカレントディレクトリにできあがります。
-			</li>
-		</ul>
-		<p>
-			EXEファイルやSCRファイルを作成するには、必ずPACKFILEが必要に
-			なります。PACKFILEとは、複数のファイルをひとまとめにして、EXE，
-			SCRファイルの中に埋め込むための定義ファイルです。
-		</p>
-		<p>
-			この機能を使えば、EXEの中に埋め込まれた画像ファイルやデータファ
-			イルなどを使うことができ、１ファイルだけの画像や音声を使った
-			ソフトを作ることができます。(ただしMIDIファイルやDLLなど一部のデータ
-			ファイルは埋め込むことができません。また、埋め込んだファイルの
-			内容を変更して上からセーブすることはできません)
-		</p>
-		<p>
-			もちろん、スクリプトで使用されているすべてのデータファイルを
-			EXEの中に埋め込む必要はありません。必要だと思ったものだけを
-			埋め込み、それ以外は通常の外部ファイルとして置いておいても問題
-			ありません。ただし、<em>最初に実行されるスクリプト「start.ax」だけは
-			必ず埋め込んでおく必要がありますので注意してください。</em>
-			「start.ax」というオブジェクトファイルは、スクリプトエディタのツールメニューで
-			「START.AXファイル作成」のメニューで作成することができます。
-		</p>
-		<p>
-			PACKFILEは、スクリプトエディタの「PACKFILE編集...」で簡単にファイルを
-			選択して編集することができます。ただし、ここで指定するファイル名は
-			スペースを含まない半角で11文字以内のMS-DOSファイルネームでなければなりません。
-		</p>
-		<p>
-			HSPでは、次のような順序でファイルのロードを行なっています。
-		</p>
-		<ol>
-			<li>EXEに埋め込まれたファイルがある場合には、その中からまずロードするファイルを探す。</li>
-			<li>なかった場合には、カレントディレクトリから探す。</li>
-			<li>それでもなかった場合には、pathで指定されているディレクトリから探す。Windows、Systemディレトクリなど。</li>
-			<li>それも見つからない場合は、エラーとする。</li>
-		</ol>
-		<p>
-			EXEファイルを作成し終わったら、まず必要最低限と思われるファイル
-			だけを、新しく作ったディレクトリに移して実行できるかどうかを
-			確認しておくといいでしょう。通常作業を行なっているディレクトリ
-			には、EXEに埋め込む前のファイルがカレントディレクトリに置かれて
-			いるので、PACKFILEで指定を忘れてファイルが埋め込まれていない
-			場合でも、正常に動作してしまうためです。
-		</p>
-		<p>
-			「外部ファイル実行」を使用している場合は、「オブジェクトファイルのみ作成」の
-			チェックボックスをONにしてから、外部ファイル実行をすることで、
-			オブジェクトファイルの作成が可能です。
-		</p>
-
-		<h3 id="EDIT_PACKFILE">PACKFILEの編集について</h3>
-		<p>
-			「PACKFILE一覧」ダイアログでは、EXEファイルやSCRファイルを作成する際に必要な
-			データファイル群を選択、管理することができます。ここで選択されたファイルの
-			データは、PACKFILEというファイル名でカレントディレクトリに保存されます。
-			HSP3.0以降では、「PACKFILE一覧」ダイアログを使用せずにスクリプトの記述だけで、
-			実行ファイル作成のオプションを設定することができるようになっているため、
-			通常は、このダイアログを使用する必要はありません。
-		
-			詳しくは、「実行ファイルの作成方法」の項を参照してください。
-		
-		</p>
-		<p>
-			「PACKFILE一覧」のダイアログは、おおまかに次のように分かれています。
-		</p>
-		<ul>
-			<li>右側の大きなウィンドウが、PACKFILEに含まれるファイル名の一覧になります。</li>
-			<li>左側にはファイル選択ウィンドウがあります。
-			上下2つに分けられていて、上がカレントディレクトリのファイル名一覧。
-			下がディレクトリの一覧になります。</li>
-			<li>中央には、各種機能を持つボタンと、ワイルドカード指定をするためのファイルマスク指定ウィンドウが
-			あります。</li>
-		</ul>
-		<p>
-			ファイル選択ウィンドウには、中央のファイルマスクウィンドウ(通常は"*.*")で指定
-			されたファイルだけが表示されます。たとえば、ファイルマスクを"*.AX"とすると、
-			拡張子が"AX"のファイルだけが表示されるようになります。
-		</p>
-		<p>
-			表示されるディレクトリを変更したい場合は、左下のディレクトリ選択ウィンドウを
-			ダブルクリックしてください。[..]は、ディレクトリを１つ戻ることを、[-a-]や[-c-]
-			は、ドライブを意味しています。
-		</p>
-
-		<p>
-			PACKFILE一覧に、ファイルを追加するには次のように操作します。
-		</p>
-		<ol>
-			<li>左側のファイル選択ウィンドウで、追加したいファイルをクリックして選びます。[CTRL]キーを押しながらクリックすることで複数を選択することも可能です。</li>
-			<li>「追加&gt;&gt;」ボタンを押します。</li>
-			<li>選択したファイルが、右側のPACKFILE一覧に追加されます。</li>
-		</ol>
-		<p>
-			PACKFILEから指定したファイルを除外するには次のように操作します。
-		</p>
-		<ol>
-			<li>右側のPACKFILE一覧ウィンドウで、除外したいファイルをクリックして選択します（複数選択はできません）。</li>
-			<li>「削除-&gt;」ボタンを押します。</li>
-			<li>選択したファイルが、右側のPACKFILE一覧から除外されます。</li>
-		</ol>
-		<p>
-			「全追加&gt;&gt;」ボタンは、ファイル選択ウィンドウに表示されているすべてのファイルを
-			PACKFILE一覧に追加します。
-			「全削除-&gt;」ボタンは、PACKFILE一覧のファイルをすべてクリアします。
-		</p>
-		<p>
-			PACKFILEの編集が終了したら、「閉じる」ボタンを押してください。選択された
-			情報ファイルとして、PACKFILEというファイルがセーブされます。
-			PACKFILE編集によって、実際のファイルが削除されたりコピーされることはありません。
-			「キャンセル」ボタンを押すと、ウィンドウが閉じ、いままでの選択はすべて
-			無効になります。
-		</p>
-		<p>
-			現在のバージョンでは、PACKFILEは、スペースを含むディレクトリをサポートして
-			いません。「Program Files」などのスペースを含むディレクトリ下にあるファイルを
-			指定すると、うまく動作しないことがありますので注意してください。
-		</p>
-		<p>
-			実行ファイルに含まれるデータに暗号化を施し、外部からの解析や抜き出しに対処できるようになっています。
-			暗号化を行なう場合には、スクリプトエディタの「PACKFILE編集」ダイアログ
-			において、PACKFILEに含めるファイルを追加する際に「暗号化」のチェック
-			をONにしておいてください。PACKFILEに含めるファイル一覧の中で先頭に「+」
-			がつけられファイルは暗号化の対象になります。
-		</p>
-		<p>
-			ファイルの暗号化は、「start.ax」などのオブジェクトファイルを始めとして
-			画像ファイルや、テキストファイルなどHSPから読み込まれるファイルすべてに
-			適用することができます。PACKFILEに含めることのできないファイル、MIDIや
-			動画ファイルなどは対象にはなりません。
-		</p>
-		<p>
-			暗号化されたファイルは、bloadなどの命令で読み込んだ場合には、正常な
-			内容に復号されます。これをbsaveで保存した場合には暗号化されません。
-		</p>
 
 		<h3 id="MAKE_SAVER">スクリーンセーバーの作成</h3>
 		<p>
@@ -824,7 +663,7 @@
 		<h3 id="SCRIPT_SAMPLE">HSPスクリプトサンプル</h3>
 		<p>
 			HSP3デモのタイトルから「サンプルスクリプトを見る」を選択するか、
-			HSPがインストールされたディレクトリ(C:\hsp32\など)にある、
+			HSPがインストールされたディレクトリ(C:\hsp36\など)にある、
 			「sampview.exe」を実行することで、HSPスクリプトサンプルを閲覧、実行
 			することのできる、サンプルビューアーが起動します。
 		</p>
@@ -965,15 +804,9 @@
 			スクリプトのコンパイル時には、自動的に「hspdef.as」が読み込まれることになります。
 		</p>
 		<p>
-			HSP3.1まで存在した、スクリプトエディタのHSPメニュー「HSP拡張マクロを使用する」
-			項目が廃止され、常にHSP拡張マクロを使用する形に変更されています。
-			このスイッチは、もともとHSP2互換のスクリプトとして動作させるために用意
-			されたものですが、誤って変更してしまった場合に、HSP3用のスクリプトが
-			動作しなくなるなど、問題が指摘されていました。
-			HSP3.0がリリースされてから4年が経過しており、HSP2互換のモードで実行する
-			必要性が薄くなってきたこともあり、このスイッチはメニューから削除しました。
-			ただし、HSP2互換マクロは従来通り用意されているので、スクリプトの先頭に
-			「#include "hsp261cmp.as"」を記述すれば、HSP2互換として動作します。
+			様々な拡張マクロ、モジュールが用意されていますので、「#include」命令を使用して
+			明示的に利用することができます。
+			たとえば、「#include "hsp261cmp.as"」を記述すれば、HSP2.61互換として動作します。
 		</p>
 
 		<h3 id="COLORING_AND_TAB">スクリプトの色分けとタブ</h3>
@@ -1069,7 +902,7 @@
 			通常のHSP3ランタイムと同等の機能を持っていますが、文字列の扱いのみ
 			unicode(UTF-8)となっています。
 			SJISの文字コードを扱う標準のHSPでは表現できない文字を扱うことのできる
-			新しいHSP3として今後も進化を続ける予定です。
+			新しいHSP3として今後も改良を続ける予定です。
 			使用する場合は、スクリプトの先頭に以下の行を指定してください。
 		</p>
 		<pre>
@@ -1090,7 +923,7 @@
 		</pre>
 		<p>
 			64bit(x64)ランタイムは、64bit版のWindows上でのみ動作します。
-			同梱されているバージョンには、まだ既知の問題があり、将来の64bit化に向けてのβテスト版とお考えください。
+			同梱されているバージョンには、将来の64bit化に向けてのβテスト版とお考えください。
 			通常は、標準の32bit版HSP3ランタイム(hsp3.exe)をご使用頂いて問題ありません。
 			<br><br>
 			現状では、64bitランタイムに以下の注意点があります。
@@ -1105,7 +938,6 @@
 			<li>COM関連の命令が正しく動作しないことがあります
 			<li>#packopt命令によるアイコンの書き換えに対応していません
 		</ul>
-
 
 
 		<h3 id="HSED3CUSTOM">スクリプトエディタの拡張機能について</h3>
@@ -1126,8 +958,7 @@
 		<p>
 			拡張された機能は、「ツール」→「オプション」メニューの各項目でON/OFFが可能です。<br>
 			リンクラベル機能を使用する場合は、オプションの「エディタ」→「色」項目で「リンクラベルを使用する」にチェックを入れてください。以降は、スクリプト中のラベルが色分けされ、ダブルクリックすることで定義されたラベルに移動できます。<br>
-			背景画像表示機能により、指定した画像をエディタ背景右下に常に表示しておくことができます。オプションの「エディタ」→「色」項目で設定することができます。
-			設定が空欄(デフォルト)の場合は、HSPTVフォルダにあるeditor.pngファイルが使用されます。(背景画像を使用しない場合は、editor.pngファイルを削除するか、別なフォルダに移動してください。)<br>
+			背景画像表示機能により、指定した画像をエディタ背景右下に常に表示しておくことができます。オプションの「エディタ」→「色」項目で設定することができます。<br>
 			ファイルの自動バックアップ機能は、オプションの「全般」→「動作」から設定することができます。一定時間ごとに編集中のファイルのバックアップを作成することで、強制終了やリセットなど不測の事態にスクリプトを失うことがなくなります。(バックアップは、HSPのインストールフォルダ内の「backup」フォルダに作成されます。)
 		</p>
 
@@ -3967,13 +3798,14 @@ v("arraycount",n)  : SafeArrayの次元nの要素の要素数</pre>
 			<caption>HSPから標準で利用できる画像ファイル形式 一覧</caption>
 			<tr><th>拡張子</th><th>フォーマット</th></tr>
 			<tr><td>bmp</td><td>Windows標準ビットマップ画像データ</td></tr>
+			<tr><td>png</td><td>PNG形式画像圧縮データ</td></tr>
 			<tr><td>jpg</td><td>JPEG形式画像圧縮データ</td></tr>
 			<tr><td>gif</td><td>GIF形式画像圧縮データ(アニメーションを除く)</td></tr>
 			<tr><td>ico</td><td>Windows標準アイコン画像データ</td></tr>
 		</table>
 		<p>
-			画像の読み込みは、picload命令によって行ないます。ファイル名を指定する
-			ことで、自動的にフォーマットを判別して読み込みます。
+			画像の読み込みは、picload命令またはcelload命令によって行ないます。
+			ファイル名を指定することで、自動的にフォーマットを判別して読み込みます。
 			また、メモリストリーム機能を使用することで、メモリ上に存在する
 			ファイルデータから画像を読み込むことも可能です。
 			pngフォーマットについては、COM機能を利用して読み込むことが可能です。
@@ -4046,10 +3878,6 @@ v("arraycount",n)  : SafeArrayの次元nの要素の要素数</pre>
 		<p>
 		2Dキャラクター表示のためのセル描画命令が用意されています。
 		これは、従来のgcopy命令に代わる分かりやすい記述と構造を持っています。
-		また、将来のバージョンでのαチャンネルサポートやDirectX対応を見据えた、
-		高速描画のための拡張という側面を持っています。
-		将来のバージョンでは、CEL関連命令で扱われる画像素材及び描画は、
-		DirectXによる高速化の対象となります。
 		<BR><BR>
 		セル描画命令により、キャラクターの描画コストを減らし、その素材を明確に
 		分けることができます。もちろん、従来と同様のgcopy命令による表示も同じ
@@ -4201,7 +4029,7 @@ v("arraycount",n)  : SafeArrayの次元nの要素の要素数</pre>
 		<h3 id="PLAY_MULTIMEDIA">マルチメディア再生</h3>
 		<p>
 			HSP3では、WAV形式のPCM音声ファイル、SMF(MID)形式の標準MIDIファイル、
-			CDの音声トラック再生、AVI/MPEG動画ファイルやMP3/WMA等の波形圧縮
+			CDの音声トラック再生、AVI/MPEG動画ファイルやMP3/WMA等の圧縮音声
 			ファイルなどを手軽に扱うことができます。
 			また、MCIコントロールデバイスとして登録されている機器のコントロール
 			も可能です。
@@ -4233,6 +4061,10 @@ v("arraycount",n)  : SafeArrayの次元nの要素の要素数</pre>
 			WAV形式のPCM音声は、最初にすべてメモリにロードされてから再生されるので
 			ループ再生も問題なく行われます。ただし、WAVファイルのサイズだけメモリ
 			を占有するので、あまりにも巨大なファイルは、mci命令で再生するようにしてください。
+		</p>
+		<p>
+			ogg形式の圧縮音声ファイルをhspoggプラグインから扱うことにより、
+			メモリ効率良く、完全なループ演奏を実現することが可能です。
 		</p>
 
 		<h3 id="VAR_INIT">未初期化の変数検出</h3>
@@ -4727,7 +4559,7 @@ button goto/gosub "name",*label  ボタンを押した時の割り込み</pre>
 		「高精度タイマーの使用」は、標準HSPランタイムにおいて高精度タイマー(マルチメディアタイマー)を使用するための設定です。<br>
 		HSP3.4では、すべてのスクリプト実行時に高精度タイマーを使用してawait命令などの待ち時間を調整していましたが、
 		それほど厳密なタイマー制御が必要ないツールや常駐アプリケーションにおいて、CPUの負荷が増大することがありました。
-		HSP3.5では、スクリプト中でawait命令を使用している場合のみ、高精度タイマーを使用する形に修正されています。<br>
+		HSP3.5以降では、スクリプト中でawait命令を使用している場合のみ、高精度タイマーを使用する形に修正されています。<br>
 		明示的に高精度タイマーの使用をON/OFFしたい場合に、#bootopt命令を使用することができます。
 		「#bootopt notimer 1」をスクリプトに記述した場合は、高精度タイマーを使用しません。
 		</p>
