--- a/package/win32/doclib/hsp3.htm
+++ b/package/win32/doclib/hsp3.htm
@@ -742,7 +742,10 @@
 			iconinsツールは、Kpanさん、Tetr@podさん、inoviaさんが作成し公開されているものを同梱させていただきました。
 		</p>
 		<p>
-			OpenHSPで多くの修正及び助言を頂いた皆様、特にfujidigさん、Shark++さん、naznyarkさん、tds12さん、ue_daiさん、kurogomaさん、inoviaさんに感謝致します。
+			<a href="https://github.com/StreamletStudio/ZLibWrap" target="_blank">ZLibWrap.dll</a>は、StreamletStudioが作成し公開されているものを同梱させていただきました。
+		</p>
+		<p>
+			OpenHSPで多くの修正及び助言を頂いた皆様、特にfujidigさん、Shark++さん、naznyarkさん、tds12さん、ue_daiさん、kurogomaさん、inoviaさん、窓月ららさんに感謝致します。
 		</p>
 		<p>
 			その他、HSP周辺ツール開発者ML(HSPDev-ML)の皆様及び、β版のテスト報告や、
