objinfo関数に配置オブジェクト固有の情報(exinfo1,exinfo2)を追加 プリプロセッサのシステムマクロとして、ランタイム名を示す__runtime__を追加 mod_appconfig.as,mod_dirboxモジュール及び、サンプルを追加
Former-commit-id: 70ff2b6dbb188a4a35704df1650383895389f3b6

--- a/package/win32/doclib/hspprog.htm
+++ b/package/win32/doclib/hspprog.htm
@@ -3070,6 +3070,7 @@ owari         → mes "OK"</pre>
 			<tr><td>__date__</td><td>使用時点の日付</td></tr>
 			<tr><td>__time__</td><td>使用時点の時刻</td></tr>
 			<tr><td>__hspver__</td><td>HSPバージョン番号(*)</td></tr>
+			<tr><td>__runtime__</td><td>HSPランタイム名</td></tr>
 		</table>
 		<p>
 			*上位8bit・下位8bitがそれぞれメジャー・マイナーバージョンを示します。
