インデックスの修正
Former-commit-id: da2843073057cf7a60305f0d17ef8fee9006b691

--- a/package/win32/index.htm
+++ b/package/win32/index.htm
@@ -21,7 +21,10 @@
 		<!-- 本文 -->
 		<ul>
 			<li><a href="doclib/hsp3.htm">HSPシステムドキュメント・インストールガイド（hsp3.htm）</a></li>
-			<li><a href="doclib/update.htm">以前のバージョンからの変更点（アップデートガイド）（update.htm）</a></li>
+			<li><a href="doclib/update.htm">HSP3 アップデートガイド(機能更新の解説)（update.htm）</a></li>
+			<ul>
+				<li><a href="doclib/update36.htm">HSP3.6 新機能ハイライト（update36.htm）</a></li>
+			</ul>
 			<li><a href="doclib/hspprog.htm">プログラミングマニュアル・基本仕様ガイド（hspprog.htm）</a></li>
 			<li><a href="doclib/beginner/start.htm">初心者のためのHSP入門（beginner/start.htm）</a></li>
 			<li><a href="doclib/faq.htm">よくある質問（faq.htm）</a></li>
