--- a/package/win32/doclib/update36.htm
+++ b/package/win32/doclib/update36.htm
@@ -87,7 +87,9 @@
 			<dd>
 			<p>
 			ハイレベルな3D表現を可能にする<a href="http://hsp.tv/make/hgimg4.html" target="_blank">HGIMG4プラグイン</a>を大幅に更新しています。
-			システムの安定向上のほか、FBXモデル変換時の制約、複製時の制約など細かい使い勝手が向上しています。また、Unityからモデルやアニメーションをインポートする方法などもドキュメントで解説しています。
+			システムの安定向上のほか、FBXモデル変換時の制約、複製時の制約など細かい使い勝手が向上しています。また、Unityからモデルやアニメーションをインポートする方法などもドキュメントで解説しています。<br>
+			また、新しいHGIMG4ツールにより、fbxファイルを変換した後の3Dデータをより詳細に確認、編集できるようになりました。
+			マテリアル(.material)ファイルをGUIにより確認することが可能になっています。
 			</p>
 			</dd>
 
@@ -572,9 +574,15 @@
 		新しいバージョンでは、2D用のシェーダーを内蔵し外部のファイルを不要となりました。
 		2D描画のみの利用であれば、「res/shaders」内のファイルを用意する必要はありません。
 		3D描画時は、引き続き外部のシェーダーファイルが必要となります。
+		<br>
+		<br>
+		<LI>HGIMG4ツールの更新
+		<br><br>
+		スクリプトエディタから起動できるHGIMG4ツール(gpbconv.exe)に、新しい機能が追加されています。<br>
+		fbxファイルを変換した後の3Dデータをより詳細に確認、編集できるマテリアル(.material)GUIエディタを追加しています。
+		マテリアルごとの細かい描画設定を変更できるほか、テクスチャファイルの確認や、ライティング設定なども後から編集することが可能です。
 		</p>
 		</UL>
-
 
 		<!-- フッター -->
 		<ul id="FOOTER">
