--- a/package/win32/doclib/update36.htm
+++ b/package/win32/doclib/update36.htm
@@ -567,6 +567,17 @@
 		</table>
 		プラットフォームによってサポートされるフォントの種類、品質などが異なる場合がありますのでご注意ください。
 		<br>
+		TTFフォント表示は、HSP3Dishと同様にフォント文字列をテクスチャに描画してキャッシュする形になっています。
+		この方法は、自由なフォントと文字を使える利点がありますが、異なる内容を広範囲に表示する場合はCPUやメモリ負荷が大きくなります。
+		毎フレームごとに変化する値や内容を表示しているとフレームごとの負荷が増大してしまうので、この点は以前とは大きく異なります。
+		また、フォントサイズが大きかったり、画面内に大量のテキストを表示するような場合も負荷が大きくなります。<br>
+		TTFフォントによる描画が必要ない場合は、従来の描画形式による表示をシステムリクエストで切り替えることが可能です。(Windowsプラットフォームのみ)
+		</p><pre>
+	setreq SYSREQ_USEGPBFONT,1
+	screen 0,800,600
+		</pre><p>
+		上のように、システムリクエストでSYSREQ_USEGPBFONTに1を設定後、screen命令でシステムを再設定してください。(従来の形式では、「res/font.gpb」ファイルを用意する必要があります)
+		<br>
 		<br>
 		<LI>2D描画シェーダーの内蔵
 		<br><br>
@@ -578,6 +589,7 @@
 		<br>
 		<LI>HGIMG4ツールの更新
 		<br><br>
+		<img src="img/hsp36_material.png" width="480"><br>
 		スクリプトエディタから起動できるHGIMG4ツール(gpbconv.exe)に、新しい機能が追加されています。<br>
 		fbxファイルを変換した後の3Dデータをより詳細に確認、編集できるマテリアル(.material)GUIエディタを追加しています。
 		マテリアルごとの細かい描画設定を変更できるほか、テクスチャファイルの確認や、ライティング設定なども後から編集することが可能です。
