HGIMG4のフォント描画を修正
Former-commit-id: cfc7b56208a7fdbfcf2f827e65dc44c53feed9f2

--- a/package/win32/doclib/update36.htm
+++ b/package/win32/doclib/update36.htm
@@ -571,12 +571,12 @@
 		この方法は、自由なフォントと文字を使える利点がありますが、異なる内容を広範囲に表示する場合はCPUやメモリ負荷が大きくなります。
 		毎フレームごとに変化する値や内容を表示しているとフレームごとの負荷が増大してしまうので、この点は以前とは大きく異なります。
 		また、フォントサイズが大きかったり、画面内に大量のテキストを表示するような場合も負荷が大きくなります。<br>
-		TTFフォントによる描画が必要ない場合は、従来の描画形式による表示をシステムリクエストで切り替えることが可能です。(Windowsプラットフォームのみ)
+		TTFフォントによる描画が必要ない場合は、従来の描画形式による表示をシステムリクエストで切り替えることが可能です。
 		</p><pre>
 	setreq SYSREQ_USEGPBFONT,1
-	screen 0,800,600
 		</pre><p>
-		上のように、システムリクエストでSYSREQ_USEGPBFONTに1を設定後、screen命令でシステムを再設定してください。(従来の形式では、「res/font.gpb」ファイルを用意する必要があります)
+		上のように、システムリクエストでSYSREQ_USEGPBFONTに1を設定することで従来のフォント表示に切り替えることができます。(「res/font.gpb」ファイルを用意する必要があります)<br>
+		システムリクエストによるフォント描画の切り替えは、任意のタイミングで行うことが可能です。
 		<br>
 		<br>
 		<LI>2D描画シェーダーの内蔵
