--- a/package/win32/doclib/hgimg4.html
+++ b/package/win32/doclib/hgimg4.html
@@ -34,10 +34,12 @@
 		<li><a href="#INITALIZE">初期化と描画の方法</a></li>
 		<li><a href="#3DABSTRACT">3D動作の概要</a></li>
 		<li><a href="#2DABSTRACT">2D動作の概要</a></li>
+		<li><a href="#FONTMES">フォント表示</a></li>
 		<li><a href="#MODE_OBJ">オブジェクトのモード設定</a></li>
 		<li><a href="#CAMERA">カメラの設定</a></li>
 		<li><a href="#LIGHT">ライトの設定</a></li>
 		<li><a href="#COLLISION">コリジョングループ設定と衝突検知</a></li>
+		<li><a href="#RENDERGRP">レンダリンググループ設定</a></li>
 		<li><a href="#PHYSICS">物理挙動の設定</a></li>
 		<li><a href="#MATERIAL">マテリアルの設定</a></li>
 		<li><a href="#3DMODEL">3Dモデルデータの表示</a></li>
@@ -48,6 +50,7 @@
 		<li><a href="#OBJECTPRM">オブジェクトのコアパラメーター</a></li>
 		<li><a href="#OBJECTCLONE">オブジェクトのクローン</a></li>
 		<li><a href="#VECTOR">実数ベクトルサポート命令</a></li>
+		<li><a href="#ROTORDER">XYZの回転順番について</a></li>
 		<li><a href="#FRAMERATE">フレームレートの取得</a></li>
 		<li><a href="#ANIMATION">アニメーションクリップの作成</a></li>
 		<li><a href="#2DSHADER">2D描画時の独自シェーダー設定</a></li>
@@ -55,6 +58,7 @@
 		<li><a href="#RENDERBUFFER">レンダリングバッファ</a></li>
 		<li><a href="#EVENT">イベントリスト</a></li>
 		<li><a href="#MEMLIMIT">登録の限界数について</a></li>
+		<li><a href="#ERRORLOG">エラーログ</a></li>
 		<li><a href="#LICENCE">著作権とライセンス</a></li>
 		<li><a href="#ANGLE_LICENCE">Project Angleの著作権とライセンス</a></li>
 		<li><a href="#PRONAMA_LICENCE">プロ生ちゃんサンプルデータの著作権とライセンス</a></li>
@@ -185,6 +189,9 @@
 	</p><pre>
 	res/shaders フォルダ(中のファイルも含む)
 	</pre>
+	<p>
+	2Dの描画のみを行う場合は、res/shadersフォルダ内のシェーダーファイルは必要ありません。
+	<p>
 
 
 	<h2 id="DLLNOTICE">DLLについての注意点</h2>
@@ -653,6 +660,42 @@
 	</p>
 
 
+	<h2 id="FONTMES">フォント表示</h2>
+
+	<p>
+	mes命令により任意の文字列を表示することが可能です。
+	表示する際のフォントは、font命令で指定された設定が適用されます。
+	</p>
+	<pre>
+		font msgothic,30,font_antialias
+		mes "こんにちは"
+	</pre>
+	<p>
+	デフォルトの設定では、標準的なフォントの16ポイントサイズが設定されています。
+	プラットフォームにより、別途フォントファイルが必要な場合があるので注意してください。
+	</p>
+		<table border="1">
+		<tr><td>プラットフォーム</td><td>文字コード</td><td>フォントファイル</td></tr>
+		<tr><td>Windows</td><td>SJIS</td><td>不要</td></tr>
+		<tr><td>Linux/RaspberryPi</td><td>UTF-8</td><td>ipaexg.ttfファイルが必要</td></tr>
+		<tr><td>html5(Emscripten)</td><td>UTF-8</td><td>ipaexg.ttfファイルが必要</td></tr>
+		<tr><td>android</td><td>UTF-8</td><td>不要</td></tr>
+		<tr><td>iOS</td><td>UTF-8</td><td>不要</td></tr>
+		</table>
+	<p>
+	フォント表示は、HSP3Dishと同様にフォント文字列をテクスチャに描画してキャッシュする形になっています。
+	この方法は、自由なフォントと文字を使える利点がありますが、異なる内容を広範囲に表示する場合はCPUやメモリ負荷が大きくなります。
+	毎フレームごとに変化する値や内容を表示しているとフレームごとの負荷が増大してしまいます。
+	また、フォントサイズが大きかったり、画面内に大量のテキストを表示するような場合も負荷が大きくなります。<br>
+	フォントによる描画が必要ない場合は、HSP3.5までの軽量な描画形式による表示をシステムリクエストで切り替えることが可能です。(ただし、表示できる文字は英文字のみに制限されます)
+		</p><pre>
+	setreq SYSREQ_USEGPBFONT,1
+		</pre><p>
+	上のように、システムリクエストでSYSREQ_USEGPBFONTに1を設定することでHSP3.5互換のフォント表示に切り替えることができます。(この場合、フォントデータとして「res/font.gpb」ファイルを用意する必要があります)<br>
+	システムリクエストによるフォント描画の切り替えは、任意のタイミングで行うことが可能です。
+	</p>
+
+
 	<h2 id="MODE_OBJ">オブジェクトのモード設定</h2>
 
 	<p>
@@ -746,6 +789,9 @@
 	シーン内に配置されたカメラは、gpusecamera命令により切り替えることができます。
 	独自のカメラを生成することにより、FOV(画角)やZ軸の範囲(Zクリッピング範囲)を独自に
 	設定することができます。
+	<br>
+	また、gpcamera命令のカメラタイプ値に1を指定することで、平行投影(Orthographic)を行うカメラを設定することが可能です。
+
 	</p>
 
 
@@ -825,6 +871,29 @@
 	コリジョングループ設定と衝突検知は、3Dノードオブジェクト、2Dのスプライトオブジェクト
 	どちらでも利用できます。ただし、3Dノードオブジェクトとスプライトオブジェクト同士は
 	座標系が異なるため衝突は検知されません。
+	</p>
+
+
+	<h2 id="RENDERGRP">レンダリンググループ設定</h2>
+
+	<p>
+	レンダリンググループの設定により、オブジェクトごとに参照されるカメラ・ライトをグループ分けすることが可能です。<br>
+	setobjrender命令により、カメラごとに表示する/しないという設定をオブジェクトに与えることができます。
+	また、ライティングのグループも設定することができ、オブジェクトごとにライトの反映をコントロールすることができます。
+		</p><pre>
+	setobjrender id,rendergroup,lightgroup
+
+		id(0) : オブジェクトID
+		 rendergroup(1) : レンダリンググループ値
+		lightgroup(1) : ライティンググループ値
+		</pre><p>
+	レンダリンググループ値は、カメラやライトが持つレンダリンググループ値と同一である場合は、有効となります。
+	通常は、オブジェクト、カメラともにグループ1が設定されています。特定のカメラからの表示のみ
+	表示を無効にしたい場合などに利用できます。<br>
+	ライティンググループ値は、特定のライトに対して有効/無効を切り替えるものです。
+	ライトが持つライティンググループ値と異なる場合は、ライトが無効となります。<br>
+	それぞれのグループ値は、1,2,4,8,16,32,64,128,256,512,1024,2048,4096,8192,16384,32768の中から
+	任意のビットを組み合わせて指定可能です。
 	</p>
 
 
@@ -1068,20 +1137,23 @@
 	さらに、テクスチャが必要な場合は、同じフォルダ内の画像ファイルも読み込まれます。
 
 	gpload命令で読み込むためのファイル(.gpb形式)は、gameplay3Dで標準的に使用されている
-	データ形式です。HGIMG4では、.gpb形式を生成するためのGPBコンバーターを用意しています。<br>
+	データ形式です。HGIMG4では、.gpb形式を生成するためのHGIMG4ツールを用意しています。<br>
 	HSPスクリプトエディタの「ツール」メニューから「HGIMG4ツールを開く」を選択するか、
 	</p>
 	<pre>
 		gpbconv.exe
 	</pre>
 	<p>
-	を起動することで、GUIによるファイル変換ツールが起動します。
+	を起動することでツールが起動します。
 	(内部でコマンドラインツールのgameplay-encoder.exeを呼び出します)
+		</p>
+		<p>
+		<img src="img/hsp36_material.png">
+		</p>
+		<p>
+	HGIMG4ツールでは、fbx形式のファイルを.gpb形式に変換することが可能です。
+	また、.gpb形式とともに読み込まれるマテリアル情報(.material)の出力・確認が可能です。
 <br><br>
-	.gpb形式とともに読み込まれるマテリアル情報(.material)も、GPBコンバーターから
-	出力が可能です。
-<br><br>
-	.gpb形式はfbx形式から変換することが可能です。
 	fbx形式は、Autodesk社の3Dツールで使用されている標準的な3D形式です。
 	3Dツール「Unity」を使って、fbx形式の変換や確認を行うことが可能です。
 	詳しくは、<a href="hgimg4_unity.html" target="_blank">こちらのページ</a>をご覧ください。
@@ -1105,9 +1177,13 @@
 
 	<p>
 	.gpb形式とともに読み込まれるマテリアル情報(.materialファイル)には、モデルが持つマテリアル(質感)についての詳細な情報が含まれています。
-	.materialファイルは、テキスト形式のファイルなので、通常のテキストエディタで
-	閲覧したり、必要に応じて内容を編集することが可能です。
-	以下は、テキスト内容の例です。
+	.materialファイルは、テキスト形式のファイルなので、通常のテキストエディタで閲覧したり、必要に応じて内容を編集することが可能です。
+	<br>
+	.materialファイルは、HGIMG4ツールから確認・編集を行うことが可能です。
+	HGIMG4ツールは、HSPスクリプトエディタの「ツール」メニューから「HGIMG4ツールを開く」を選択するか、
+	「gpbconv.exe」を直接実行してください。
+	<br>
+	以下は、マテリアル情報に含まれるテキスト内容の例です。
 	複数のマテリアルが含まれている場合は、「material マテリアル名」に続く「{」から「}」の範囲が設定になります。
 	</p>
 	<pre>
@@ -1203,8 +1279,6 @@
 	出力されるテクスチャファイル名は、resフォルダ以下に統一されます。
 	正しく読み込みができない場合は、テクスチャ(画像)ファイルが、.materialファイルで
 	指定された場所に存在するか確認をしてみてください。
-	.materialファイルは、複雑なモデルの定義などの場合、手で修正することが
-	困難になります。今後のバージョンでは、ツールによるサポートを予定しています。
 	</p>
 	<p>
 	<img src="image/tamane_samp.jpg">
@@ -1525,6 +1599,30 @@
 	実数ベクトルサポート命令は、必ずしもすべての人が使う必要はありません。
 	中上級者の方が場面に合わせて使用の選択するといいでしょう。
 	</p>
+
+
+	<h2 id="ROTORDER">XYZの回転順番について</h2>
+
+	<p>
+	HGIMG4では、オブジェクトの姿勢をX,Y,Zの回転角度で指定することができますが、
+	アニメーションデータや、内部の管理ではクォータニオン形式による回転情報を使用しています。<br>
+	オブジェクトの姿勢情報をXYZの回転角度で取得する場合、getang,getangr命令を使用することができますが、
+	完全なX,Y,Zの回転角度を求めることが困難なため、setang命令で指定したX,Y,Z角度と異なる
+	値が取得される可能性があります。あくまでも、近い姿勢を再現するために変換された値であることに注意をしてください。
+	<br>
+	回転角度を指定する場合は、通常setang命令を使用しますが、この場合はX->Y->Zの順番で回転させた姿勢が適用されます。
+	これだけでは不十分な場合は、以下のように回転順番が異なる命令が用意されているのでご活用ください。
+	</p><pre>
+	setang (X->Y->Zの順番による回転角度の設定)
+	setangy (Y->X->Zの順番による回転角度の設定)
+	setangz (Z->Y->Xの順番による回転角度の設定)
+	event_ang (X->Y->Zの順番による回転角度のイベント変化)
+	event_angy (Y->X->Zの順番による回転角度のイベント変化)
+	event_angz (Z->Y->Xの順番による回転角度のイベント変化)
+	event_setang (X->Y->Zの順番による回転角度のイベント設定)
+	event_setangy (Y->X->Zの順番による回転角度のイベント設定)
+	event_setangz (Z->Y->Xの順番による回転角度のイベント設定)
+	</pre>
 
 
 	<h2 id="FRAMERATE">フレームレートの取得</h2>
@@ -2030,6 +2128,22 @@
 	</pre>
 	<p>
 	この他に、HSP3Dishがサポートする設定項目も使用可能です。
+	</p>
+
+
+	<h2 id="ERRORLOG">エラーログ</h2>
+
+	<p>
+	HGIMG4では、エラーや不具合が発生した際の原因を知るためのヒントとなるログファイルが出力されます。
+	ログファイルは、ランタイムファイル(hsp3gp.exe)と同じフォルダに「hsp3gp.log」というテキストファイルで出力されます。
+	3Dモデルのロード時や、アニメーション適用時、シェーダーコンパイル時などの詳細なエラーや警告が記録されています。
+	ログの出力をOn/Offするためのスイッチをsysreq(システムリクエスト)項目で設定することが可能です。
+	</p>
+	<pre>
+		setreq SYSREQ_LOGWRITE,0	; ログ出力を抑制
+	</pre>
+	<p>
+	上の記述を入れることで、ログファイルの出力は行われません。標準では、ログファイルの出力は有効になっています。
 	</p>
 
 
